--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@next/font": "^14.2.4",
+    "aos": "^2.3.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +21,7 @@
     "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
